--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+public/*.webm filter=lfs diff=lfs merge=lfs -text
 public/minecraft.webm filter=lfs diff=lfs merge=lfs -text
 public/codw.webm filter=lfs diff=lfs merge=lfs -text
 /publicgta6.webm filter=lfs diff=lfs merge=lfs -text
